--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -3,6 +3,7 @@
 $color__black: #000;
 $color__white: #fff;
 $color__gallery: #eee;
+$color__pelorous: #33A0C0;
 
 // Typography
 $font__size--main: 17px;
