--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -1,5 +1,7 @@
 <nav class="site-nav">
-    {{> "icons/menu"}}
+    <div class="site-nav__icon">
+      {{> "icons/menu"}}
+    </div>
     {{#if @blog.navigation}}
         {{navigation}}
     {{/if}}
