Hamburger menu toggle without JavaScript.

--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -4,8 +4,14 @@
   right: 2rem;
 }
 
+.site-nav__toggle {
+  opacity: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
 .site-nav__icon {
-  background-color: $color__white;
   border: 1px solid $color__white;
   border-radius: 2px;
   box-sizing: border-box;
@@ -13,7 +19,9 @@
   padding: 0.5rem;
   width: 100%;
 
-  .site-nav:hover & {
+  .site-nav:hover &,
+  .site-nav__toggle:checked ~ & {
+    background-color: $color__white;
     border: 1px solid $color__gallery;
     border-bottom: 1px solid $color__white;
   }
@@ -34,7 +42,8 @@
   width: 10rem;
   z-index: -1;
 
-  .site-nav:hover & {
+  .site-nav:hover &,
+  .site-nav__toggle:checked ~ & {
     display: block;
   }
 }
