--- a/partials/site-nav.hbs
+++ b/partials/site-nav.hbs
@@ -1,4 +1,5 @@
 <nav class="site-nav">
+    <input class="site-nav__toggle" type="checkbox">
     <div class="site-nav__icon">
       {{> "icons/menu"}}
     </div>
