--- a/index.hbs
+++ b/index.hbs
@@ -3,20 +3,18 @@
 into the {body} of the default.hbs template --}}
 
 {{!-- The big featured header, it uses blog cover image as a BG if available --}}
-<header class="site-header outer">
-    <div class="inner">
-        <div class="site-header-content">
-            <h1 class="site-title">
-                {{#if @blog.logo}}
-                    <img class="site-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
-                {{else}}
-                    {{@blog.title}}
-                {{/if}}
-            </h1>
-            <h2 class="site-description">{{@blog.description}}</h2>
-        </div>
-        {{> "site-nav"}}
-    </div>
+<header class="site-header">
+  <div class="site-header__content">
+    <h1 class="site-header__title">
+      {{#if @blog.logo}}
+        <img class="site-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
+      {{else}}
+        {{@blog.title}}
+      {{/if}}
+    </h1>
+    <div class="site-header__description">{{@blog.description}}</div>
+  </div>
+  {{> "site-nav"}}
 </header>
 
 {{!-- The main content area --}}
