--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -4,6 +4,7 @@ $color__black: #000;
 $color__white: #fff;
 $color__gallery: #eee;
 $color__pelorous: #33A0C0;
+$color__light-grey: #FDFDFD;
 
 // Breakpoints
 $breakpoint__l: 1200px;
@@ -32,6 +33,7 @@ $breakpoint__s: 550px;
   padding: 0 1.6rem;
 
   @include breakpoint('m') {
-    padding: 0 8.8rem;
+    padding-left: 8.8rem;;
+    padding-right: 8.8rem;;
   }
 }
