--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,8 @@
-@import 'variables';
-@import 'navigation';
+@import "variables";
+@import "navigation";
 @import "site-header";
+@import "site-main";
+@import "post-card";
 
 html {
   font-family: 'Lucida Grande';
