--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -1,21 +1,11 @@
-<article class="post-card {{post_class}}{{#unless feature_image}} no-image{{/unless}}">
-    <div class="post-card-content">
-        <a class="post-card-content-link" href="{{url}}">
-            <header class="post-card-header">
-                {{#if primary_tag}}
-                    <span class="post-card-tags">{{primary_tag.name}}</span>
-                {{/if}}
-                <h2 class="post-card-title">{{title}}</h2>
-            </header>
-            <section class="post-card-excerpt">
-                <p>{{excerpt words="33"}}</p>
-            </section>
-        </a>
-        <footer class="post-card-meta">
-            {{#if author.profile_image}}
-                <img class="author-profile-image" src="{{author.profile_image}}" alt="{{author.name}}" />
-            {{/if}}
-            <span class="post-card-author">{{author}}</span>
-        </footer>
-    </div>
+<article class="post-card {{post_class}}">
+  <header class="post-card__header">
+    <h2 class="post-card__title">{{title}}</h2>
+  </header>
+  <section class="post-card__excerpt">
+    <p>{{excerpt words="33"}}...</p>
+  </section>
+  <footer class="post-card__footer">
+    <a class="post-card__link" href="{{url}}">Read more...</a>
+  </footer>
 </article>
