Footer styled and added social media links with RSS link.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,6 +3,8 @@
 @import "site-header";
 @import "site-main";
 @import "post-card";
+@import "site-footer";
+@import "some-links";
 
 html {
   color: $colot__tuna;
