Move post-card's content width to content-wrapper mixin. Move header into partials. Style post page's content to center.

--- a/assets/sass/_post-card.scss
+++ b/assets/sass/_post-card.scss
@@ -16,8 +16,8 @@
 }
 
 .post-card__content {
-  max-width: 750px;
-  margin: 0 auto;
+  // max-width: 750px;
+  // margin: 0 auto;
 }
 
 .post-card__excerpt {
