--- a/index.hbs
+++ b/index.hbs
@@ -2,20 +2,8 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
-{{!-- The big featured header, it uses blog cover image as a BG if available --}}
-<header class="site-header">
-  <div class="site-header__content">
-    <h1 class="site-header__title">
-      {{#if @blog.logo}}
-        <img class="site-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
-      {{else}}
-        {{@blog.title}}
-      {{/if}}
-    </h1>
-    <div class="site-header__description">{{@blog.description}}</div>
-  </div>
-  {{> "site-nav"}}
-</header>
+{{!-- The big featured header. --}}
+{{> "site-header"}}
 
 {{!-- The main content area --}}
 <main id="site-main" class="site-main outer" role="main">
