--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -36,3 +36,45 @@ h3, h4 {
 a {
   color: $color__pelorous;
 }
+
+.progress {
+    position: fixed;
+    right: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    border: none;
+    color: var(--blue);
+    background: transparent;
+    appearance: none;
+}
+
+.progress::-webkit-progress-bar {
+    background-color: transparent;
+}
+
+.progress::-webkit-progress-value {
+    background-color: $color__pelorous;
+}
+
+.progress::-moz-progress-bar {
+    background-color: $color__pelorous;
+}
+
+.progress-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: transparent;
+}
+
+.progress-bar {
+    display: block;
+    width: 50%;
+    height: inherit;
+    background-color: $color__pelorous;
+}
