Made index page post lis smaller and only links shown. Made header smaller. Removed bottom margin from content wrapper. Components should only have top margin for content flow.

--- a/assets/sass/_post-card.scss
+++ b/assets/sass/_post-card.scss
@@ -1,25 +1,13 @@
 @import "variables";
 
 .post-card {
-  @include content-wrapper();
-  border-bottom: 1px solid #eee;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  margin: 1rem 0 0;
 
-  &:nth-child(2n) {
-    background-color: $color__light-grey;
+  &:first-of-type {
+    margin: 0;
   }
 }
 
 .post-card__title {
-  @include font__h1();
-}
-
-.post-card__content {
-  // max-width: 750px;
-  // margin: 0 auto;
-}
-
-.post-card__excerpt {
-  text-align: justify;
+  @include font__h3();
 }
