--- a/index.hbs
+++ b/index.hbs
@@ -6,9 +6,11 @@ into the {body} of the default.hbs template --}}
 {{> "site-header"}}
 
 {{!-- The main content area --}}
-<main id="site-main" class="site-main outer" role="main">
-  {{#foreach posts}}
-    {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-    {{> "post-card"}}
-  {{/foreach}}
+<main id="site-main" class="site-main" role="main">
+  <div class="site-main__content">
+    {{#foreach posts}}
+      {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
+      {{> "post-card"}}
+    {{/foreach}}
+  </div>
 </main>
