--- a/assets/sass/_site-header.scss
+++ b/assets/sass/_site-header.scss
@@ -1,8 +1,10 @@
 @import 'variables';
 
 .site-header {
-  @include content-wrapper();
   display: block;
+  padding: 0 1.6rem;
+  margin: 0 auto;
+  max-width: 750px;
 }
 
 .site-header__title {
