--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -1,13 +1,5 @@
-<article class="post-card {{post_class}}">
-  <div class="post-card__content">
-    <header class="post-card__header">
-      <h2 class="post-card__title">{{title}}</h2>
-    </header>
-    <section class="post-card__excerpt">
-      <p>{{excerpt words="50"}}...</p>
-    </section>
-    <footer class="post-card__footer">
-      <a class="post-card__link" href="{{url}}">Read more...</a>
-    </footer>
-  </div>
-</article>
+<div class="post-card {{post_class}}">
+  <a class="post-card__link" href="{{url}}">
+    <div class="post-card__title">{{title}}</div>
+  </a>
+</div>
