Header title is h2 at post pages. At index page h1.

--- a/assets/sass/_site-header.scss
+++ b/assets/sass/_site-header.scss
@@ -7,7 +7,13 @@
   max-width: 750px;
 }
 
+.site-header__title-link {
+  color: inherit;
+  text-decoration: none;
+}
+
 .site-header__title {
+  @include font__h1;
   text-align: center;
   margin: 6rem 0 0;
 }
