--- a/partials/site-header.hbs
+++ b/partials/site-header.hbs
@@ -1,12 +1,13 @@
 <header class="site-header">
   <div class="site-header__content">
-    <h1 class="site-header__title">
-      {{#if @blog.logo}}
-        <img class="site-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" />
-      {{else}}
-        {{@blog.title}}
-      {{/if}}
-    </h1>
+    <a class="site-header__title-link" href="{{@blog.url}}">
+      {{#is "home"}}
+        <h1 class="site-header__title">{{@blog.title}}</h1>
+      {{/is}}
+      {{^is "home"}}
+        <h2 class="site-header__title">{{@blog.title}}</h2>
+      {{/is}}
+    </a>
     <div class="site-header__description">{{@blog.description}}</div>
   </div>
   {{> "site-nav"}}
