--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -2,6 +2,7 @@
 // Use to name colors: http://chir.ag/projects/name-that-color/
 $color__black: #000;
 $color__white: #fff;
+$color__white--50: rgba(256, 256, 256, 0.50);
 $color__gallery: #eee;
 $color__pelorous: #33A0C0;
 $color__light-grey: #FDFDFD;
