Separate progress bar styles to own file and use BEM class naming. Also webkit support for progress bar.

--- a/default.hbs
+++ b/default.hbs
@@ -22,8 +22,8 @@
 <body class="{{body_class}}">
 
     <progress class="progress" value="0">
-        <div class="progress-container">
-            <span class="progress-bar"></span>
+        <div class="progress__container">
+            <span class="progress__bar"></span>
         </div>
     </progress>
 
