Fixed navigation styles in mobile style. Mobile style bigger. Added shadow to menu.

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -4,6 +4,7 @@ $color__black: #000;
 $color__white: #fff;
 $color__white--50: rgba(256, 256, 256, 0.50);
 $color__gallery: #eee;
+$color__alto: #ddd;
 $color__pelorous: #33A0C0;
 $color__light-grey: #FDFDFD;
 $colot__tuna: #33333d;
