--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -2,8 +2,13 @@
   position: fixed;
   top: 2rem;
   right: 2rem;
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 3rem;
+  width: 3rem;
+
+  @include breakpoint('s') {
+    height: 2.5rem;
+    width: 2.5rem;
+  }
 }
 
 .site-nav__toggle {
@@ -22,6 +27,11 @@
   padding: 0.5rem;
   width: 100%;
 
+  svg {
+    height: 100%;
+    width: 100%;
+  }
+
   .site-nav:hover &,
   .site-nav__toggle:checked ~ & {
     background-color: $color__white;
@@ -35,8 +45,10 @@
   background-color: $color__white;
   border-radius: 2px;
   border: 1px solid $color__gallery;
+  border-bottom: 1px solid $color__alto;
+  box-shadow: 0 1px 3px 0 $color__gallery;
   display: none;
-  font-size: 0.8rem;
+  font-size: 1rem;
   padding: 1rem;
   margin: 0;
   position: absolute;
@@ -45,6 +57,10 @@
   list-style: none;
   min-width: 6rem;
   z-index: -1;
+
+  @include breakpoint('s') {
+    font-size: 0.8rem;
+  }
 
   .site-nav:hover &,
   .site-nav__toggle:checked ~ & {
