--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -39,11 +39,13 @@ $breakpoint__s: 500px;
 @mixin font__h2() {
   font-size: 1.2rem;
   font-weight: bold;
+  margin: 2.4rem 0 1.2rem;
 }
 
 @mixin font__h3() {
   font-size: 1rem;
   font-weight: bold;
+  margin: 2rem 0 1rem;
 }
 
 // Content
