Chnaged post listing style to squares and added logo possibility.

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -50,7 +50,7 @@ $breakpoint__s: 500px;
 
 // Content
 @mixin content-wrapper() {
-  padding: 0 1.6rem;
+  padding: 3rem 1.6rem 0;
   margin: 0 auto;
   max-width: 750px;
 
