--- a/assets/sass/_site-header.scss
+++ b/assets/sass/_site-header.scss
@@ -7,6 +7,12 @@
   max-width: 750px;
 }
 
+.site-header__logo {
+  display: block;
+  height: 6rem;
+  margin: 6rem auto 0;
+}
+
 .site-header__title-link {
   color: inherit;
   text-decoration: none;
@@ -15,7 +21,7 @@
 .site-header__title {
   @include font__h1;
   text-align: center;
-  margin: 6rem 0 0;
+  margin: 3rem 0 0;
 }
 
 .site-header__description {
