--- a/index.hbs
+++ b/index.hbs
@@ -8,6 +8,7 @@ into the {body} of the default.hbs template --}}
 {{!-- The main content area --}}
 <main id="site-main" class="site-main" role="main">
   <div class="site-main__content">
+    <div class="lifeline"></div>
     {{#foreach posts}}
       {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
       {{> "post-card"}}
