--- a/partials/site-header.hbs
+++ b/partials/site-header.hbs
@@ -1,6 +1,9 @@
 <header class="site-header">
   <div class="site-header__content">
     <a class="site-header__title-link" href="{{@blog.url}}">
+      {{#if @blog.logo}}
+        <img class="site-header__logo" src="{{@blog.logo}}" alt="Logo" />
+      {{/if}}
       {{#is "home"}}
         <h1 class="site-header__title">{{@blog.title}}</h1>
       {{/is}}
