List posts at index page with titles and not blocks.

--- a/assets/sass/_post-full.scss
+++ b/assets/sass/_post-full.scss
@@ -1,9 +1,6 @@
-.post-full {
-
-}
-
-.post-full__header {
-
+.post-full__meta-date {
+  color: $color__silver;
+  font-family: sans;
 }
 
 .post-full__content {
