--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -8,6 +8,7 @@ $color__alto: #ddd;
 $color__pelorous: #33A0C0;
 $color__light-grey: #FDFDFD;
 $colot__tuna: #33333d;
+$color__silver: #999;
 
 // Breakpoints
 $breakpoint__l: 1200px;
