--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -1,9 +1,15 @@
 <div class="post-card {{post_class}}">
   <a class="post-card__link" href="{{url}}">
-    <div class="post-card__cover{{^unless feature_image}} post-card__cover--has-image{{/unless}}" {{^unless feature_image}}style="background-image: url({{feature_image}})"{{/unless}}>
+    <div class="post-card__date">
+      <div class="post-card__month-and-day">
+        {{date published_at format="MMMM DD"}}
+      </div>
+      <div class="post-card__year">
+        {{date published_at format="YYYY"}}
+      </div>
     </div>
-    <div class="post-card__content">
-      <div class="post-card__title">{{title}}</div>
+    <div class="post-card__title">
+      {{title}}
     </div>
   </a>
 </div>
