--- a/assets/sass/_post-full.scss
+++ b/assets/sass/_post-full.scss
@@ -15,8 +15,8 @@
     border-top: 1px solid $color__gallery;
     font-family: monospace !important;
     font-size: 0.78rem !important;
-    margin: 1.5rem 0;
-    padding: 1.5rem;
+    margin: 2rem 0 !important;
+    padding: 1.5rem 0 !important;
     overflow: auto;
   }
 
