--- a/assets/sass/_site-header.scss
+++ b/assets/sass/_site-header.scss
@@ -1,16 +1,28 @@
 @import 'variables';
 
 .site-header {
-  display: block;
-  padding: 0 1.6rem;
-  margin: 0 auto;
-  max-width: 750px;
+  background-color: $color__white--95;
+  border-bottom: 1px solid $color__black--075;
+  box-shadow: 0 5px 15px $color__black--05;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 4rem;
+  z-index: 1;
+}
+
+.site-header__content {
+  @include center-wrapper;
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .site-header__logo {
-  display: block;
-  height: 6rem;
-  margin: 6rem auto 0;
+  display: inline-block;
+  height: 2rem;
 }
 
 .site-header__title-link {
@@ -19,12 +31,13 @@
 }
 
 .site-header__title {
-  @include font__h1;
-  text-align: center;
-  margin: 3rem 0 0;
+  display: inline-block;
+  margin: 0;
+  font-size: 1rem;
 }
 
 .site-header__description {
   text-align: center;
-  margin: 1rem 0 0;
+  margin: 0;
+  font-size: 0.8rem;
 }
