--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,11 +13,9 @@
 
 html {
   color: $colot__tuna;
-  font: 19px/1.5 "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
-
-  @include breakpoint('s') {
-    font-size: 17px;
-  }
+  font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+  font-size: calc(12px + 1.4vmin);
+  line-height: 160%;
 }
 
 body {
