--- a/partials/site-header.hbs
+++ b/partials/site-header.hbs
@@ -1,17 +1,20 @@
 <header class="site-header">
   <div class="site-header__content">
-    <a class="site-header__title-link" href="{{@blog.url}}">
       {{#if @blog.logo}}
-        <img class="site-header__logo" src="{{@blog.logo}}" alt="Logo" />
+        <a class="site-header__title-link" href="{{@blog.url}}">
+          <img class="site-header__logo" src="{{@blog.logo}}" alt="Logo" />
+        </a>
       {{/if}}
-      {{#is "home"}}
-        <h1 class="site-header__title">{{@blog.title}}</h1>
-      {{/is}}
-      {{^is "home"}}
-        <h2 class="site-header__title">{{@blog.title}}</h2>
-      {{/is}}
-    </a>
-    <div class="site-header__description">{{@blog.description}}</div>
+      <div class="site-header__title-and-description">
+        {{#is "home"}}
+          <h1 class="site-header__title">{{@blog.title}}</h1>
+        {{/is}}
+        {{^is "home"}}
+          <h2 class="site-header__title">{{@blog.title}}</h2>
+        {{/is}}
+
+      <div class="site-header__description">{{@blog.description}}</div>
+    </div>
+    {{> "site-nav"}}
   </div>
-  {{> "site-nav"}}
 </header>
