Show featured image in post listing.

--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -6,5 +6,10 @@
     <div class="post-card__title">
       {{title}}
     </div>
+    {{#if feature_image}}
+    <div class="post-card__image-container">
+      <img class="post-card__image" src="{{feature_image}}" />
+    </div>
+    {{/if}}
   </a>
 </div>
