--- a/assets/sass/_post-card.scss
+++ b/assets/sass/_post-card.scss
@@ -31,4 +31,22 @@
 .post-card__link {
   color: $colot__tuna;
   text-decoration: none;
+  width: 100%;
+}
+
+.post-card__image-container {
+  border-radius: 0.5rem;
+  height: 4rem;
+  margin: 0.5rem 0 0;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+
+.post-card__image {
+  max-width: 100%;
+  opacity: 0.7;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
