--- a/assets/sass/_post-full.scss
+++ b/assets/sass/_post-full.scss
@@ -2,8 +2,24 @@
   color: $color__silver;
 }
 
+.post-full__image {
+  background-size: cover;
+  border-radius: 0.5rem;
+  margin: 2rem 0 0;
+  width: 100%;
+}
+
 .post-full__content {
-  img, iframe {
+  margin: 4rem 0 0;
+
+  iframe {
+    display: block;
+    margin: 4rem auto;
+    max-width: 100%;
+  }
+
+  img {
+    border-radius: 0.5rem;
     display: block;
     margin: 4rem auto;
     max-width: 100%;
