--- a/default.hbs
+++ b/default.hbs
@@ -12,6 +12,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{!-- Styles'n'Scripts --}}
+    <script>
+      // Default configuration variables.
+      var USE_DISQUS = false;
+      var DISQUS_SHORTNAME = '';
+      var DISQUS_URL = '';
+
+      var disqus_config = function () {
+          this.page.url = '{{url absolute="true"}}';
+          this.page.identifier = 'ghost-{{comment_id}}';
+      };
+    </script>
+    <script src={{asset "js/config.js"}}></script>
     <link rel="stylesheet" type="text/css" href="{{asset "build/css/main.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "build/css/prism.css"}}"/>
 
@@ -69,6 +81,7 @@
     </script>
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/disqus.js"}}" defer></script>
 
     {{#if pagination.pages}}
     <script>
