--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -1,16 +1,12 @@
+$site-nav__icon-width: 1.5rem;
+$site-nav__padding: 1.5rem;
+
 .site-nav {
+  margin: 0 calc(-1 * #{$site-nav__padding}) 0 0;
   position: relative;
   height: 2.5rem;
   z-index: 1;
   width: 4.5rem;
-}
-
-.site-nav__toggle {
-  opacity: 0;
-  position: absolute;
-  height: 100%;
-  margin: 0;
-  width: 100%;
 }
 
 .site-nav__icon {
@@ -19,16 +15,16 @@
   border-radius: 2px;
   box-sizing: border-box;
   height: 100%;
-  padding: 0.5rem;
+  padding: 0.5rem $site-nav__padding;
+  text-align: center;
   width: 100%;
 
   svg {
-    height: 100%;
-    width: 100%;
+    height: $site-nav__icon-width;
+    width: $site-nav__icon-width;
   }
 
-  .site-nav:hover &,
-  .site-nav__toggle:checked ~ & {
+  .site-nav:hover & {
     background-color: $color__white;
     border-radius: 2px 0 0 2px;
     border: 1px solid $color__gallery;
@@ -57,8 +53,7 @@
     font-size: 0.8rem;
   }
 
-  .site-nav:hover &,
-  .site-nav__toggle:checked ~ & {
+  .site-nav:hover & {
     display: block;
   }
 }
