--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -3,6 +3,7 @@
 $color__black: #000;
 $color__black--075: rgba(0,0,0,0.075);
 $color__black--05: rgba(0,0,0,0.05);
+$color__black--50: rgba(0,0,0,0.50);
 $color__white: #fff;
 $color__white--50: rgba(256, 256, 256, 0.50);
 $color__white--95: rgba(256, 256, 256, 0.95);
@@ -10,7 +11,7 @@ $color__gallery: #eee;
 $color__alto: #ddd;
 $color__pelorous: #33A0C0;
 $color__light-grey: #FDFDFD;
-$colot__tuna: #33333d;
+$color__tuna: #33333d;
 $color__silver: #999;
 
 // Breakpoints
