--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,9 +10,10 @@
 @import "progress";
 @import "pagination";
 @import "lifeline";
+@import "koenig";
 
 html {
-  color: $colot__tuna;
+  color: $color__tuna;
   font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
   font-size: calc(12px + 1.2vmin);
   line-height: 160%;
