--- a/default.hbs
+++ b/default.hbs
@@ -16,11 +16,10 @@
       // Default configuration variables.
       var USE_DISQUS = false;
       var DISQUS_SHORTNAME = '';
-      var DISQUS_URL = '';
 
       var disqus_config = function () {
           this.page.url = '{{url absolute="true"}}';
-          this.page.identifier = 'ghost-{{comment_id}}';
+          this.page.identifier = 'ghost-{{post.comment_id}}';
       };
     </script>
     <link rel="stylesheet" type="text/css" href="{{asset "build/css/main.css"}}" />
